changed readme structure